--- a/client/index.html
+++ b/client/index.html
@@ -5,42 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="/client/js/index.js" async></script>
     <title>Search</title>
 </head>
 <body>
     <h1>Yu-Gi-Oh! Card Database</h1>
-    <form>
+    
+    <nav>
+        <a href="http://localhost:5000/table">Card Database</a>
+    </nav>
+
+    <form id="card_form">
         <p>
             <label for="name">Card Name:</label>
-            <input type="text" id="name">
+            <input type="text" id="name" name="name">
         </p>
 
 
         <p>
             <label for="description">Description:</label>
-            <input type="text" id="description">
+            <input type="text" id="description" name="description">
         </p>
 
 
         <p>
             <label for="type">Card Type:</label>
-            <input type="text" id="type">
+            <input type="text" id="type" name="type">
         </p>
 
 
         <p>
             <label for="attribute">Attribute:</label>
-            <input type="text" id="attribute">
+            <input type="text" id="attribute" name="attribute">
         </p>
 
 
         <p>
             <label for="level">Level/Rank:</label>
-            <input type="level" id="level">
+            <input type="level" id="level" name="level">
         </p>
 
 
-        <button>Submit</button>
+        <button id="data-submit">Submit</button>
     </form>
 </body>
 </html>
