--- a/client/table.html
+++ b/client/table.html
@@ -8,6 +8,10 @@
     <title>Table</title>
 </head>
 <body>
+    <h1>Card Repository</h1>
+    <nav>
+        <a href="http://localhost:5000">Card Form</a>
+    </nav>
     <!-- Create table -->
     <table>
         <tr>
@@ -18,7 +22,7 @@
             <th>Level/Rank</th>
         </tr>
 
-        <tr>
+        <!-- <tr>
             <td>Blue-Eyes White Dragon</td>
             <td>This legendary dragon is a powerful engine of destruction. Virtually invincible, very few have faced this awesome creature and lived to tell the tale.</td>
             <td>Normal</td>
@@ -32,7 +36,7 @@
             <td>Spellcaster</td>
             <td>Dark</td>
             <td>7</td>
-        </tr>
+        </tr> -->
     </table>
 
 </body>
