--- a/client/index.html
+++ b/client/index.html
@@ -11,12 +11,12 @@
 </head>
 <body>
     <h1>Yu-Gi-Oh! Card Database</h1>
-    
+
     <nav>
         <a href="http://localhost:5000/table">Card Database</a>
     </nav>
 
-    <form id="card_form">
+    <form id="card_form" action="localhost:5000/table">
         <p>
             <label for="name">Card Name:</label>
             <input type="text" id="name" name="name">
