--- a/client/table.html
+++ b/client/table.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="table.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="/client/js/table.js" async></script>
     <title>Table</title>
 </head>
 <body>
@@ -12,8 +14,9 @@
     <nav>
         <a href="http://localhost:5000">Card Form</a>
     </nav>
+
     <!-- Create table -->
-    <table>
+    <table id="card-table">
         <tr>
             <th>Name</th>
             <th>Description</th>
@@ -22,21 +25,7 @@
             <th>Level/Rank</th>
         </tr>
 
-        <!-- <tr>
-            <td>Blue-Eyes White Dragon</td>
-            <td>This legendary dragon is a powerful engine of destruction. Virtually invincible, very few have faced this awesome creature and lived to tell the tale.</td>
-            <td>Normal</td>
-            <td>Light</td>
-            <td>8</td>
-        </tr>
 
-        <tr>
-            <td>Dark Magician</td>
-            <td>The ultimate wizard in terms of attack and defense</td>
-            <td>Spellcaster</td>
-            <td>Dark</td>
-            <td>7</td>
-        </tr> -->
     </table>
 
 </body>
