--- a/client/table.html
+++ b/client/table.html
@@ -16,14 +16,17 @@
     </nav>
 
     <!-- Create table -->
-    <table id="card-table">
-        <tr>
+    <table>
+        <thead>
             <th>Name</th>
             <th>Description</th>
             <th>Type</th>
             <th>Attribute</th>
             <th>Level/Rank</th>
-        </tr>
+        </thead>
+        <tbody id="card-table">
+
+        </tbody>
 
 
     </table>
