--- a/client/table.html
+++ b/client/table.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="table.css">
+    <link rel="stylesheet" href="/client/css/table.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/client/js/table.js" async></script>
     <title>Table</title>
 </head>
 <body>
-    <h1>Card Repository</h1>
+
     <nav>
-        <a href="http://localhost:5000">Card Form</a>
+        <img id="logo" src="/client/css/yugiohDB.png" alt="Yu-Gi-Oh!">
+
+        <ul>
+            <li><a href="http://localhost:5000">Home</a></li>
+            <li><a href="http://localhost:5000/index">Form</a></li>
+        </ul>
     </nav>
 
     <!-- Create table -->
@@ -23,6 +28,7 @@
             <th>Type</th>
             <th>Attribute</th>
             <th>Level/Rank</th>
+            <th>Delete</th>
         </thead>
         <tbody id="card-table">
 
