--- a/client/home.html
+++ b/client/home.html
@@ -21,7 +21,7 @@
 
     <div>
         <p>
-            Welcome duelists to the Yu-Gi-Oh! Card Database! Here we give you the information necessary to build your knowledge base for every card throughout the Yu-Gi-Oh! franchise. With your help, we will create a database full of various cards from tuner monsters to XYZ monsters! Now use this database to assemble the ultimate arsenal and create the ultimate deck, IT'S TIME TO DUEL!!!
+            Welcome duelists to the Yu-Gi-Oh! Card Database! Here we give you the information necessary to build your knowledge base for every card throughout the Yu-Gi-Oh! franchise. With your help, we will create a database full of various cards from tuner monsters to XYZ monsters! Now use this database to create the ultimate deck and become the next King of Games, IT'S TIME TO DUEL!!!
         </p>
     </div>
 </body>
