--- a/client/index.html
+++ b/client/index.html
@@ -13,7 +13,7 @@
 
 
     <nav>
-        <img id="logo" src="/client/css/yugiohDB.png" alt="Yu-Gi-Oh!">
+        <a href="http://localhost:5000"><img id="logo" src="/client/css/yugiohDB.png" alt="Yu-Gi-Oh!"></a>
 
         <ul>
             <li><a href="http://localhost:5000">Home</a></li>
