--- a/client/index.html
+++ b/client/index.html
@@ -18,8 +18,10 @@
         <ul>
             <li><a href="http://localhost:5000">Home</a></li>
             <li><a href="http://localhost:5000/table">Database</a></li>
+            <li><a href="http://localhost:5000/view">View</a></li>
         </ul>
     </nav>
+
 <section>
     <form id="card_form" action="localhost:5000/table">
         <fieldset>
