--- a/client/home.html
+++ b/client/home.html
@@ -16,6 +16,7 @@
         <ul>
             <li><a href="http://localhost:5000/index">Form</a></li>
             <li><a href="http://localhost:5000/table">Database</a></li>
+            <li><a href="http://localhost:5000/view">View</a></li>
         </ul>
     </nav>
 
