--- a/client/table.html
+++ b/client/table.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="/client/css/table.css">
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
-
-    <script src="/client/js/cardsTable.js" async></script>
+    <script src="/client/js/cardsTable.js"></script>
     <title>Table</title>
 </head>
 <body data-ng-app="cardsTableApp" data-ng-controller="cardsTableCtrl" data-ng-init="hideForm=true">
